syntax = "proto3";

option csharp_namespace = "dotnet_grpc";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
  string lastName = 2;
}

message HelloReply {
  string message = 1;
}
